--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
 		"aura/sql": "~2.4",
 		"aura/sqlquery": "~2.4",
 		"twig/twig": "~1.0",
-		"slim/views": "0.1.*"
+		"slim/views": "0.1.*",
+		"facebook/php-sdk-v4": "4.0.*"
 	}
 }
