--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "facebook-api-demo",
   "private": true,
   "dependencies": {
+    "requirejs": "~2.1.17",
     "jquery": "~2.1.3",
     "bootstrap": "~3.3.4"
   }
