--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
 		"twig/twig": "~1.0",
 		"slim/views": "0.1.*",
 		"facebook/php-sdk-v4": "4.0.*",
-		"hackzilla/password-generator": "~1.0"
+		"hackzilla/password-generator": "~1.0",
+		"pimple/pimple": "~3.0"
 	}
 }
