--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ php:
   - 5.6
   - 7.0
   - hhvm
-install:
+before_install:
   - composer self-update
+install:
   - composer install --no-interaction
